Menu app tests [77% -> 82%]

--- a/src/konwentor/application/tests/cases.yml
+++ b/src/konwentor/application/tests/cases.yml
@@ -50,3 +50,13 @@ konwentor:
                 - GameCopyControllerBaseTests
                 - GameCopyControllerBaseSqlTests
                 - GameCopyListControllerTestCase
+
+    menu:
+        tests:
+            test_helpers:
+                - MenuWidgetTests
+            test_models:
+                - MenuObjectTests
+            test_plugin:
+                - MenuPluginTests
+                - MenuControllerPluginTests
