Auth app tests [85% -> 91%]

--- a/src/konwentor/application/tests/cases.yml
+++ b/src/konwentor/application/tests/cases.yml
@@ -33,6 +33,9 @@ konwentor:
             test_models:
                 - UserTestCase
                 - NotLoggedUserTestCase
+            test_plugin:
+                - AuthPluginTests
+                - AuthControllerPluginTests
     forms:
         tests:
             test_forms:
