Added tests for gamecopy [91% -> 95%]

--- a/src/konwentor/application/tests/cases.yml
+++ b/src/konwentor/application/tests/cases.yml
@@ -53,6 +53,10 @@ konwentor:
                 - GameCopyControllerBaseTests
                 - GameCopyControllerBaseSqlTests
                 - GameCopyListControllerTestCase
+                - GameCopyAddControllerTests
+                - GameCopyListControllerTests
+            test_models:
+                - GameEntityTests
 
     menu:
         tests:
