--- a/src/konwentor/application/tests/cases.yml
+++ b/src/konwentor/application/tests/cases.yml
@@ -91,3 +91,12 @@ konwentor:
             test_plugin:
                 - MenuPluginTests
                 - MenuControllerPluginTests
+    flashmsg:
+        tests:
+            test_models:
+                - FlashMessageTests
+            test_helpers:
+                - FlashMessageWidgetTests
+            test_plugin:
+                - FlashMessagePluginTests
+                - FlashMessageControllerPluginTests
