--- a/src/konwentor/application/tests/cases.yml
+++ b/src/konwentor/application/tests/cases.yml
@@ -79,6 +79,8 @@ konwentor:
                 - GameCopyListControllerTestCase
                 - GameCopyAddControllerTests
                 - GameCopyListControllerTests
+                - GameCopyToBoxControllerTests
+                - SqlGameCopyToBoxControllerTests
             test_models:
                 - GameEntityTests
 
