Frontend for moving game copy to box. #kon-3 done

--- a/src/konwentor/application/routes.yml
+++ b/src/konwentor/application/routes.yml
@@ -54,7 +54,7 @@ gamecopy:
         -
             controller: GameCopyToBoxController
             route: gamecopy:movetobox
-            url: /gamecopy/movetobox
+            url: /gamecopy/movetobox/{obj_id:\d+}
 
 gameborrow:
     controllers:
