--- a/src/konwentor/application/tests/cases.yml
+++ b/src/konwentor/application/tests/cases.yml
@@ -83,6 +83,8 @@ konwentor:
                 - SqlGameCopyToBoxControllerTests
             test_models:
                 - GameEntityTests
+            test_helpers:
+                - GameEntityWidgetTests
 
     menu:
         tests:
