Made for hatak 0.2

--- a/src/konwentor/application/tests/cases.yml
+++ b/src/konwentor/application/tests/cases.yml
@@ -65,6 +65,7 @@ konwentor:
                 - NotLoggedUserTestCase
             test_plugin:
                 - AuthPluginTests
+                - UserRequestPluginTests
                 - AuthControllerPluginTests
     forms:
         tests:
