Flash Messages refactored.

--- a/src/konwentor/application/tests/cases.yml
+++ b/src/konwentor/application/tests/cases.yml
@@ -107,3 +107,4 @@ konwentor:
             test_plugin:
                 - FlashMessagePluginTests
                 - FlashMessageControllerPluginTests
+                - AddFlashmsgRequestPluginTests
