More independent auth plugin.

--- a/src/konwentor/application/tests/cases.yml
+++ b/src/konwentor/application/tests/cases.yml
@@ -66,6 +66,7 @@ konwentor:
             test_plugin:
                 - AuthPluginTests
                 - UserRequestPluginTests
+                - UserClassRequestPluginTests
                 - AuthControllerPluginTests
     forms:
         tests:
