Moved tests for new formskit.

--- a/src/konwentor/application/tests/cases.yml
+++ b/src/konwentor/application/tests/cases.yml
@@ -89,3 +89,8 @@ konwentor:
             test_plugin:
                 - MenuPluginTests
                 - MenuControllerPluginTests
+
+    application:
+        tests:
+            test_translations:
+                - KonwentorMessageTests
