Better game returning with new game borrow.

--- a/src/konwentor/application/tests/cases.yml
+++ b/src/konwentor/application/tests/cases.yml
@@ -60,6 +60,10 @@ konwentor:
             test_forms:
                 - GameBorrowAddFormTest
                 - SqlGameBorrowAddFormTest
+                - SqlGameBorrowReturnFormTest
+                - GameBorrowReturnFormTest
+                - IsGameBorrowExistingTest
+                - SqlIsGameBorrowExistingTest
     forms:
         tests:
             test_helpers:
