--- a/src/konwentor/application/routes.yml
+++ b/src/konwentor/application/routes.yml
@@ -100,3 +100,7 @@ auth:
             controller: AuthEditController
             route: auth:edit
             url: /auth/edit/{obj_id:\d+}
+        -
+            controller: AuthAddController
+            route: auth:add
+            url: /auth/add
