Add static serving from uwsgi.

--- a/code/data/frontend.ini
+++ b/code/data/frontend.ini
@@ -46,6 +46,7 @@ master = true
 need-app = true
 processes = 4
 pythonpath = *.egg
+static-map = /static=/code/src/konwentor/application/static
 
 [pshell]
 setup = konwentor.application.pshell.setup
