Add http socket for uwsgi.

--- a/code/data/frontend.ini
+++ b/code/data/frontend.ini
@@ -41,6 +41,7 @@ format = %(asctime)s %(levelname)-5.5s [%(name)s][%(threadName)s] %(message)s
 
 # End logging configuration
 [uwsgi]
+http = 0.0.0.0:80
 socket = 0.0.0.0:8000
 master = true
 need-app = true
